[gd_scene load_steps=7 format=3 uid="uid://cdg2pvoqbit7i"]

[ext_resource type="Script" uid="uid://6fubidtbx5tp" path="res://scenes/GUI/controls/buttons/gui_action_button.gd" id="1_2ydus"]
[ext_resource type="Texture2D" uid="uid://b4wijuwglcpg0" path="res://resources/sprites/GUI/shared/border3.png" id="2_mkmg0"]
[ext_resource type="Texture2D" uid="uid://dddqepuael35" path="res://resources/sprites/icons/actions/icon_heal.png" id="3_4er76"]
[ext_resource type="PackedScene" uid="uid://d2m861kwkksmb" path="res://scenes/GUI/game_main/topbar/gui_action_points.tscn" id="4_4na8x"]
[ext_resource type="Texture2D" uid="uid://dn0npwo3e475b" path="res://resources/sprites/GUI/shared/border2_inner.png" id="4_mkmg0"]
[ext_resource type="AudioStream" uid="uid://ejige36q1ebl" path="res://resources/sounds/SFX/bingo/ball_error_shake.wav" id="5_giayk"]

[node name="GUIActionButton" type="PanelContainer"]
custom_minimum_size = Vector2(54, 54)
offset_right = 54.0
offset_bottom = 67.0
size_flags_vertical = 4
script = ExtResource("1_2ydus")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_mid"
theme_override_colors/font_color = Color(1, 0.921569, 0.341176, 1)
text = "title"
horizontal_alignment = 1

[node name="Border" type="NinePatchRect" parent="VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_mkmg0")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Icon" type="TextureRect" parent="VBoxContainer/Border"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("3_4er76")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Border"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="InnerBorder" type="NinePatchRect" parent="VBoxContainer/Border/MarginContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
layout_mode = 2
texture = ExtResource("4_mkmg0")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="GUIActionPoints" parent="VBoxContainer" instance=ExtResource("4_4na8x")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Description" type="Label" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme_type_variation = &"HUD_mid"
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ErrorMessage" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme_type_variation = &"RichTextControlTip"
theme_override_colors/default_color = Color(0.960784, 0.333333, 0.364706, 1)
theme_override_constants/outline_size = 1
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="ErrorAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_giayk")
bus = &"SFX"
